# pull_requests_inky_display

./: LICENSE  Pipfile  README.md  git_out.py  git_requests.py  pull_requests.service  pyproject.toml  setup.cfg
pr_inky_display/: git_out.py  git_requests.py
