[metadata]
name = pr-inky-display
version = 0.0.0

[options]
packages = find:
install_requires =
    font-connection
    font-fredoka-one
    fonts
    inky
    invoke
    pillow
    tabulate

[options.entry_points]
console_scripts =
    git-pr-inky = pr_inky_display.git_out:main
    git-requests = pr_inky_display.git_requests:main
